[package]
name = "mtf"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
memmap = "*"
byteorder = "*"
bitflags = "*"
failure = "*"
pretty-hex = "*"
oxidized-mdf = { version = "*", path = "oxidized-mdf" }
async-std = { version = "*", features = ["attributes"]}
futures-lite = "*"
prettytable-rs = "*"
mdf = { version = "*", path = "mdf"}