[package]
name = "mtf"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
memmap = "*"
byteorder = "*"
bitflags = "*"
failure = "*"
pretty-hex = "*"
mdf = { version = "*", path = "mdf" }
serde = { version = "*", features = ["std", "derive"] }
bincode = "*"
derivative = "*"
env_logger = "*"
log = "*"
